src/tests/testfiles/binary-operators/20.txt
testfiles/binary-operators/20.c:2:5: error: invalid operands to binary '/' (have 'int' and 'float')
1 / 1.0;
^
